--- a/style.css
+++ b/style.css
@@ -1,33 +1,20 @@
-img {
-    width: 100%;
-}
-
-#no {
-    width: 50px;
-    position: absolute;
-
-}
-
-h2,
-p {
+.oclock{
+    margin: 0;
+    padding: 100px 0;
     text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
+    background-size: cover;
+    background-position: 50% 50%;
+    background-image: url(img/day2.jpg);
 }
-
-.count-p {
-    font-size: 1.5em;
-    color: blueviolet;
+.p-hour{
+    font-size: 4em;
+    margin: 0;
+    font-family: 'Orbitron', sans-serif;
+    text-shadow:  0px 0px 7px white;
 }
-
-.wrapper {
-    background-color: #c0c0c0;
-    height: 80vh;
-    width: 80%;
-    margin: auto;
-    position: relative;
+.p-day{
+    font-size: 2em;
 }
 body{
-    background-color: #c0c0c0;
-    overflow: hidden;
+    margin: 0;
 }
